--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.0.6.RELEASE</spring.version>
-		<org.aspectj-version>1.7.4.RELEASE</org.aspectj-version>
+		<org.aspectj-version>1.7.4</org.aspectj-version>
 	</properties>
 
 	<dependencies>
