--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.cloudcode.push</groupId>
 	<artifactId>Cloudcode-WebSocketPush</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>Cloudcode-WebSocketPush</name>
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>com.cloudcode</groupId>
 			<artifactId>Cloudcode-Framework</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.1</version>
 		</dependency>
 
 		<!-- json for spring -->
@@ -75,10 +75,22 @@
 			<artifactId>jetty-websocket</artifactId>
 			<version>8.1.19.v20160209</version>
 		</dependency>
-<dependency>
-   <groupId>org.apache.tomcat.embed</groupId>
-   <artifactId>tomcat-embed-websocket</artifactId>
-   <version>7.0.52</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-websocket</artifactId>
+			<version>7.0.52</version>
+		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>lawyee-maven</id>
+			<name>Lawyee Maven Repository</name>
+			<url>http://127.0.0.1:8081/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>lawyee-maven</id>
+			<name>Lawyee Maven Repository</name>
+			<url>http://127.0.0.1:8081/nexus/content/repositories/releases/</url>
+		</repository>
+	</distributionManagement>
 </project>
